--- a/Soelvkikkert/Pages/Index.cshtml
+++ b/Soelvkikkert/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <img src="sølvkikkert.png" width="1080" height="720">
 </div>
