Nu virker det sgu

--- a/Soelvkikkert/Pages/Index.cshtml
+++ b/Soelvkikkert/Pages/Index.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <img src="~/sølvkikkert.png" width="1080" height="720" />
+    <h1 class="display-4">Velkommen til Sølvkikkert.dk</h1>
+    <img class="image" src="~/Images/Soelvkikkert.png" width="1080" height="720"/>
 </div>
