--- a/Soelvkikkert/Pages/Shared/_Layout.cshtml
+++ b/Soelvkikkert/Pages/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Produkter">Produkter</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Administrator">Admin</a>
+                        </li>
                         <ul class="navbar-nav flex-grow-1 justify-content-end">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Login">Mit Vitec</a>
