--- a/Soelvkikkert/Pages/Administrator.cshtml
+++ b/Soelvkikkert/Pages/Administrator.cshtml
@@ -21,7 +21,7 @@
           for(int i = 0; i <= 10; i++){
             <tr>
             <th scope="row">@i</th>
-            <td>#</td>
+            <td>Johhni</td>
             <td>Otto</td>
             <td>hansi@noget.com</td>
             <td>888888888</td>
