--- a/Soelvkikkert/Pages/Administrator.cshtml
+++ b/Soelvkikkert/Pages/Administrator.cshtml
@@ -21,14 +21,13 @@
           for(int i = 0; i <= 10; i++){
             <tr>
             <th scope="row">@i</th>
-            <td>Johhni</td>
+            <td></td>
             <td>Otto</td>
-            <td>hansi@noget.com</td>
+            <td>johnni@noget.com</td>
             <td>888888888</td>
             <td>Aktiv</td>
             </tr>
           }
       }
-
   </tbody>
 </table>
