Fix subscriebr create/edit

--- a/Soelvkikkert/Pages/Subscribers/Edit.cshtml
+++ b/Soelvkikkert/Pages/Subscribers/Edit.cshtml
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Subscriber.Active" /> @Html.DisplayNameFor(model => model.Active)
+                        <input asp-for="Subscriber.Active" /> @Html.DisplayNameFor(model => model.Subscriber.Active)
                     </label>
                 </div>
             </div>
