--- a/Soelvkikkert/Pages/Subscribers/Create.cshtml
+++ b/Soelvkikkert/Pages/Subscribers/Create.cshtml
@@ -36,7 +36,7 @@
             <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="Subscriber.Active" /> @Html.DisplayNameFor(model => model.Active))
+                        <input asp-for="Subscriber.Active" /> @Html.DisplayNameFor(model => model.Subscriber.Active))
                     </label>
                 </div>
             </div>
