Admin side med knapper

--- a/Soelvkikkert/Pages/Shared/_Layout.cshtml
+++ b/Soelvkikkert/Pages/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Login">Mit Vitec</a>
                             </li>
+                                                    <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Administrator">Admin</a>
+                        </li>
                         </ul>
                     </ul>
                 </div>
