--- a/SoelvkikkertMVC/Views/Home/Index.cshtml
+++ b/SoelvkikkertMVC/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Velkommen til Sølvkikkert.dk</h1>
+    <img class="image" src="~/Images/Soelvkikkert.png" width="1080" height="720"/>
 </div>
