--- a/SoelvkikkertMVC/Views/Product/Index.cshtml
+++ b/SoelvkikkertMVC/Views/Product/Index.cshtml
@@ -8,13 +8,13 @@
 <div class="container">
     <div class="row">
         @{
-            for(int i=1; i <= 50; i++){
+            foreach(var product in Model){
                <div class="card m-3" style="width: 18rem;">
                     <img src="~/Images/Soelvkikkert.png" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Produkt nr. @i</h5>
-                        <p>Beskrivelse her... bla bla bla</p>
-                        <a href="https://www.google.com" class="btn btn-primary">Link til produkt</a>
+                        <h5 class="card-title">@product.Name</h5>
+                        <p>@product.Description</p>
+                        <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id=@product.ID class="btn btn-primary">Link til produkt</a>
                     </div>
                 </div>
             }
