--- a/MVCLogin/wwwroot/css/site.css
+++ b/MVCLogin/wwwroot/css/site.css
@@ -162,20 +162,20 @@ body {
 
 @-webkit-keyframes fade {
     from {
-        opacity: .4
+        opacity: .4;
     }
 
     to {
-        opacity: 1
+        opacity: 1;
     }
 }
 
 @keyframes fade {
     from {
-        opacity: .4
+        opacity: .4;
     }
 
     to {
-        opacity: 1
+        opacity: 1;
     }
 }
