--- a/MVCLogin/Views/Product/Index.cshtml
+++ b/MVCLogin/Views/Product/Index.cshtml
@@ -12,7 +12,7 @@
             foreach (var product in Model)
             {
                 <div class="card m-3" style="width: 18rem;">
-                    <img src="~/images/Soelvkikkert.png" class="card-img-top">
+                    <img src="~/images/@product.ImagePath" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">@product.Name</h5>
                         <p>@product.Description</p>
